[gd_scene load_steps=33 format=4 uid="uid://c81f2axihuklg"]

[ext_resource type="Script" uid="uid://byo0mkwwnr3g8" path="res://Scripts/level.gd" id="1_tf3fl"]
[ext_resource type="Script" uid="uid://chk0gg111k2n5" path="res://Scripts/camera.gd" id="2_hbq6r"]
[ext_resource type="Texture2D" uid="uid://cufo407rbhyc1" path="res://Assets/Test.png" id="3_7kbhc"]
[ext_resource type="Texture2D" uid="uid://c24lrqr75nry8" path="res://Assets/Rock.png" id="3_uygrl"]
[ext_resource type="PackedScene" uid="uid://cg40rbfffjlng" path="res://Scenes/token.tscn" id="4_yj0tv"]
[ext_resource type="PackedScene" uid="uid://cqqxa66vuu4rg" path="res://Scenes/bubble.tscn" id="5_uygrl"]
[ext_resource type="PackedScene" uid="uid://cmarcl55kf6nh" path="res://Scenes/spikes.tscn" id="6_fypjr"]
[ext_resource type="PackedScene" uid="uid://rif721tfwcm7" path="res://Scenes/player.tscn" id="7_ds0tp"]
[ext_resource type="PackedScene" uid="uid://hj4uee7j5bcq" path="res://Scenes/level_end.tscn" id="7_hbq6r"]
[ext_resource type="Texture2D" uid="uid://bfnu26r03ylxv" path="res://Assets/Ground1.png" id="9_7kbhc"]
[ext_resource type="Texture2D" uid="uid://7flkpifbuag7" path="res://Assets/Ceiling.png" id="9_1448s"]
[ext_resource type="Texture2D" uid="uid://budquy6qfmeg0" path="res://Assets/WallRight.png" id="9_ka7v4"]
[ext_resource type="Texture2D" uid="uid://1u0klt43nv" path="res://Assets/WallLeft.png" id="10_yj0tv"]
[ext_resource type="Texture2D" uid="uid://6mjn3g325ukc" path="res://Assets/Corners.png" id="12_1448s"]
[ext_resource type="Texture2D" uid="uid://7awfuajlcbwv" path="res://Assets/In Corners.png" id="13_ds0tp"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tf3fl"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hbq6r"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7kbhc"]
normal = Vector2(-1, 0)
distance = -384.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yj0tv"]
normal = Vector2(1, 0)
distance = -392.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j1437"]
texture = ExtResource("3_uygrl")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_i6g32"]
scenes/1/scene = ExtResource("4_yj0tv")
scenes/2/scene = ExtResource("5_uygrl")
scenes/3/scene = ExtResource("6_fypjr")
scenes/4/scene = ExtResource("7_hbq6r")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xc0e3"]
texture = ExtResource("3_7kbhc")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_6uqi0"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(1, 0, 0, 1)
sources/1 = SubResource("TileSetScenesCollectionSource_i6g32")
sources/3 = SubResource("TileSetAtlasSource_xc0e3")
sources/0 = SubResource("TileSetAtlasSource_j1437")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b5j7u"]
texture = ExtResource("3_7kbhc")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_hbq6r"]
sources/1 = SubResource("TileSetAtlasSource_b5j7u")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ds0tp"]
texture = ExtResource("9_ka7v4")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uygrl"]
texture = ExtResource("9_1448s")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ka7v4"]
texture = ExtResource("9_7kbhc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1448s"]
texture = ExtResource("10_yj0tv")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nop2h"]
texture = ExtResource("12_1448s")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ba6q6"]
texture = ExtResource("13_ds0tp")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_7kbhc"]
sources/2 = SubResource("TileSetAtlasSource_ka7v4")
sources/3 = SubResource("TileSetAtlasSource_1448s")
sources/0 = SubResource("TileSetAtlasSource_ds0tp")
sources/1 = SubResource("TileSetAtlasSource_uygrl")
sources/4 = SubResource("TileSetAtlasSource_nop2h")
sources/5 = SubResource("TileSetAtlasSource_ba6q6")

[node name="Level Template" type="Node2D"]
script = ExtResource("1_tf3fl")

[node name="Camera" type="Camera2D" parent="." groups=["Camera"]]
limit_left = -100000
limit_top = -100000
limit_right = 100000
limit_bottom = 100000
position_smoothing_speed = 8.0
drag_left_margin = 0.3
drag_top_margin = 0.3
drag_right_margin = 0.3
drag_bottom_margin = 0.3
editor_draw_drag_margin = true
script = ExtResource("2_hbq6r")

[node name="Camera Move Up" type="Area2D" parent="Camera"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/Camera Move Up"]
position = Vector2(0, -230)
shape = SubResource("WorldBoundaryShape2D_tf3fl")

[node name="Camera Move Down" type="Area2D" parent="Camera"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/Camera Move Down"]
position = Vector2(0, 230)
shape = SubResource("WorldBoundaryShape2D_hbq6r")

[node name="Camera Move Right" type="Area2D" parent="Camera"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/Camera Move Right"]
position = Vector2(11, 0)
shape = SubResource("WorldBoundaryShape2D_7kbhc")

[node name="Camera Move Left" type="Area2D" parent="Camera"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera/Camera Move Left"]
position = Vector2(-3, 0)
shape = SubResource("WorldBoundaryShape2D_yj0tv")

[node name="Ground" type="TileMapLayer" parent="."]
z_index = -1
position = Vector2(0, 8)
tile_map_data = PackedByteArray("AADo/woAAwAAAAAAAADo/wsAAwAAAAAAAADo/wwAAwAAAAAAAADp/wsAAwAAAAAAAADp/wwAAwAAAAAAAADq/wsAAwAAAAAAAADq/wwAAwAAAAAAAADr/wsAAwAAAAAAAADr/wwAAwAAAAAAAADs/wsAAwAAAAAAAADs/wwAAwAAAAAAAADt/wsAAwAAAAAAAADt/wwAAwAAAAAAAADu/wsAAwAAAAAAAADu/wwAAwAAAAAAAADv/wsAAwAAAAAAAADv/wwAAwAAAAAAAADw/wsAAwAAAAAAAADw/wwAAwAAAAAAAADx/wsAAwAAAAAAAADx/wwAAwAAAAAAAADy/wsAAwAAAAAAAADy/wwAAwAAAAAAAADz/wsAAwAAAAAAAADz/wwAAwAAAAAAAAD0/wsAAwAAAAAAAAD0/wwAAwAAAAAAAAD1/wsAAwAAAAAAAAD1/wwAAwAAAAAAAAD2/wsAAwAAAAAAAAD2/wwAAwAAAAAAAAD3/wsAAwAAAAAAAAD3/wwAAwAAAAAAAAD4/wsAAwAAAAAAAAD4/wwAAwAAAAAAAAD5/wsAAwAAAAAAAAD5/wwAAwAAAAAAAAD6/wsAAwAAAAAAAAD6/wwAAwAAAAAAAAD7/wsAAwAAAAAAAAD7/wwAAwAAAAAAAAD8/wsAAwAAAAAAAAD8/wwAAwAAAAAAAAD9/wsAAwAAAAAAAAD9/wwAAwAAAAAAAAD+/wsAAwAAAAAAAAD+/wwAAwAAAAAAAAD//wsAAwAAAAAAAAD//wwAAwAAAAAAAAAAAAsAAwAAAAAAAAAAAAwAAwAAAAAAAAABAAsAAwAAAAAAAAABAAwAAwAAAAAAAAACAAsAAwAAAAAAAAACAAwAAwAAAAAAAAADAAsAAwAAAAAAAAADAAwAAwAAAAAAAAAEAAsAAwAAAAAAAAAEAAwAAwAAAAAAAAAFAAsAAwAAAAAAAAAFAAwAAwAAAAAAAAAGAAsAAwAAAAAAAAAGAAwAAwAAAAAAAADo/wkAAwAAAAAAAADo//L/AwAAAAAAAADo//P/AwAAAAAAAADo//T/AwAAAAAAAADo//X/AwAAAAAAAADo//b/AwAAAAAAAADo//f/AwAAAAAAAADo//j/AwAAAAAAAADo//n/AwAAAAAAAADo//r/AwAAAAAAAADo//v/AwAAAAAAAADo//z/AwAAAAAAAADo//3/AwAAAAAAAADo//7/AwAAAAAAAADo////AwAAAAAAAADo/wAAAwAAAAAAAADo/wEAAwAAAAAAAADo/wIAAwAAAAAAAADo/wMAAwAAAAAAAADo/wQAAwAAAAAAAADo/wUAAwAAAAAAAADo/wYAAwAAAAAAAADo/wcAAwAAAAAAAADo/wgAAwAAAAAAAADp//L/AwAAAAAAAADp//P/AwAAAAAAAADq//L/AwAAAAAAAADq//P/AwAAAAAAAADr//L/AwAAAAAAAADr//P/AwAAAAAAAADs//L/AwAAAAAAAADs//P/AwAAAAAAAADt//L/AwAAAAAAAADt//P/AwAAAAAAAADu//L/AwAAAAAAAADu//P/AwAAAAAAAADv//L/AwAAAAAAAADv//P/AwAAAAAAAADw//L/AwAAAAAAAADw//P/AwAAAAAAAADx//L/AwAAAAAAAADx//P/AwAAAAAAAADy//L/AwAAAAAAAADy//P/AwAAAAAAAADz//L/AwAAAAAAAADz//P/AwAAAAAAAAD0//L/AwAAAAAAAAD0//P/AwAAAAAAAAD1//L/AwAAAAAAAAD1//P/AwAAAAAAAAD2//L/AwAAAAAAAAD2//P/AwAAAAAAAAD3//L/AwAAAAAAAAD3//P/AwAAAAAAAAD4//L/AwAAAAAAAAD4//P/AwAAAAAAAAD5//L/AwAAAAAAAAD5//P/AwAAAAAAAAD6//L/AwAAAAAAAAD6//P/AwAAAAAAAAD7//L/AwAAAAAAAAD7//P/AwAAAAAAAAASAPL/AwAAAAAAAAASAPP/AwAAAAAAAAATAPL/AwAAAAAAAAATAPP/AwAAAAAAAAAUAPL/AwAAAAAAAAAUAPP/AwAAAAAAAAAVAPL/AwAAAAAAAAAVAPP/AwAAAAAAAAAVAAsAAwAAAAAAAAAVAAwAAwAAAAAAAAAWAPL/AwAAAAAAAAAWAPP/AwAAAAAAAAAWAPT/AwAAAAAAAAAWAPX/AwAAAAAAAAAWAPb/AwAAAAAAAAAWAPf/AwAAAAAAAAAWAPj/AwAAAAAAAAAWAPn/AwAAAAAAAAAWAAsAAwAAAAAAAAAWAAwAAwAAAAAAAAAXAPL/AwAAAAAAAAAXAPP/AwAAAAAAAAAXAPT/AwAAAAAAAAAXAPX/AwAAAAAAAAAXAPb/AwAAAAAAAAAXAPf/AwAAAAAAAAAXAPj/AwAAAAAAAAAXAPn/AwAAAAAAAAAXAAsAAwAAAAAAAAAXAAwAAwAAAAAAAAD8//L/AwAAAAAAAAD8//P/AwAAAAAAAAD9//L/AwAAAAAAAAD9//P/AwAAAAAAAAD+//L/AwAAAAAAAAD+//P/AwAAAAAAAAD///L/AwAAAAAAAAD///P/AwAAAAAAAAAAAPL/AwAAAAAAAAAAAPP/AwAAAAAAAAABAPL/AwAAAAAAAAABAPP/AwAAAAAAAAACAPL/AwAAAAAAAAACAPP/AwAAAAAAAAADAPL/AwAAAAAAAAADAPP/AwAAAAAAAAAEAPL/AwAAAAAAAAAEAPP/AwAAAAAAAAAFAPL/AwAAAAAAAAAFAPP/AwAAAAAAAAAGAPL/AwAAAAAAAAAGAPP/AwAAAAAAAAAHAPL/AwAAAAAAAAAHAPP/AwAAAAAAAAAIAPL/AwAAAAAAAAAIAPP/AwAAAAAAAAAJAPL/AwAAAAAAAAAJAPP/AwAAAAAAAAAKAPL/AwAAAAAAAAAKAPP/AwAAAAAAAAALAPL/AwAAAAAAAAALAPP/AwAAAAAAAAAMAPL/AwAAAAAAAAAMAPP/AwAAAAAAAAANAPL/AwAAAAAAAAANAPP/AwAAAAAAAAAOAPL/AwAAAAAAAAAOAPP/AwAAAAAAAAAPAPL/AwAAAAAAAAAPAPP/AwAAAAAAAAAQAPL/AwAAAAAAAAAQAPP/AwAAAAAAAAARAPL/AwAAAAAAAAARAPP/AwAAAAAAAAAHAAsAAwAAAAAAAAAHAAwAAwAAAAAAAAAIAAsAAwAAAAAAAAAIAAwAAwAAAAAAAAAJAAsAAwAAAAAAAAAJAAwAAwAAAAAAAAAKAAsAAwAAAAAAAAAKAAwAAwAAAAAAAAALAAsAAwAAAAAAAAALAAwAAwAAAAAAAAAMAAsAAwAAAAAAAAAMAAwAAwAAAAAAAAANAAsAAwAAAAAAAAANAAwAAwAAAAAAAAAOAAsAAwAAAAAAAAAOAAwAAwAAAAAAAAAPAAsAAwAAAAAAAAAPAAwAAwAAAAAAAAAQAAsAAwAAAAAAAAAQAAwAAwAAAAAAAAARAAsAAwAAAAAAAAARAAwAAwAAAAAAAAASAAsAAwAAAAAAAAASAAwAAwAAAAAAAAATAAsAAwAAAAAAAAATAAwAAwAAAAAAAAAUAAsAAwAAAAAAAAAUAAwAAwAAAAAAAADp//T/AwAAAAAAAADp//X/AwAAAAAAAADp//b/AwAAAAAAAADp//f/AwAAAAAAAADp//j/AwAAAAAAAADp//n/AwAAAAAAAADp//r/AwAAAAAAAADp//v/AwAAAAAAAADp//z/AwAAAAAAAADp//3/AwAAAAAAAADp//7/AwAAAAAAAADp////AwAAAAAAAADp/wAAAwAAAAAAAADp/wEAAwAAAAAAAADp/wIAAwAAAAAAAADp/wMAAwAAAAAAAADp/wQAAwAAAAAAAADp/wUAAwAAAAAAAADp/wYAAwAAAAAAAADp/wcAAwAAAAAAAADp/wgAAwAAAAAAAADp/wkAAwAAAAAAAADp/woAAwAAAAAAAAAWAPr/AwAAAAAAAAAWAAIAAwAAAAAAAAAXAPr/AwAAAAAAAAAXAAIAAwAAAAAAAACv/8n/AwAAAAAAAACv/8r/AwAAAAAAAACv/8v/AwAAAAAAAACv/8z/AwAAAAAAAACv/83/AwAAAAAAAACv/87/AwAAAAAAAACv/8//AwAAAAAAAACv/9D/AwAAAAAAAACv/9H/AwAAAAAAAACv/9L/AwAAAAAAAACv/9P/AwAAAAAAAACv/9T/AwAAAAAAAACv/9X/AwAAAAAAAACv/9b/AwAAAAAAAACv/9f/AwAAAAAAAACv/9j/AwAAAAAAAACv/9n/AwAAAAAAAACv/9r/AwAAAAAAAACv/9v/AwAAAAAAAACv/9z/AwAAAAAAAACv/93/AwAAAAAAAACv/97/AwAAAAAAAACv/9//AwAAAAAAAACv/+D/AwAAAAAAAACv/+H/AwAAAAAAAACv/+L/AwAAAAAAAACv/+P/AwAAAAAAAACw/8n/AwAAAAAAAACw/8r/AwAAAAAAAACw/8v/AwAAAAAAAACw/8z/AwAAAAAAAACw/83/AwAAAAAAAACw/87/AwAAAAAAAACw/8//AwAAAAAAAACw/9D/AwAAAAAAAACw/9H/AwAAAAAAAACw/9L/AwAAAAAAAACw/9P/AwAAAAAAAACw/9T/AwAAAAAAAACw/9X/AwAAAAAAAACw/9b/AwAAAAAAAACw/9f/AwAAAAAAAACw/9j/AwAAAAAAAACw/9n/AwAAAAAAAACw/9r/AwAAAAAAAACw/9v/AwAAAAAAAACw/9z/AwAAAAAAAACw/93/AwAAAAAAAACw/97/AwAAAAAAAACw/9//AwAAAAAAAACw/+D/AwAAAAAAAACw/+H/AwAAAAAAAACw/+L/AwAAAAAAAACw/+P/AwAAAAAAAACx/8n/AwAAAAAAAACx/8r/AwAAAAAAAACx/+L/AwAAAAAAAACx/+P/AwAAAAAAAACy/8n/AwAAAAAAAACy/8r/AwAAAAAAAACy/+L/AwAAAAAAAACy/+P/AwAAAAAAAACz/8n/AwAAAAAAAACz/8r/AwAAAAAAAACz/+L/AwAAAAAAAACz/+P/AwAAAAAAAAC0/8n/AwAAAAAAAAC0/8r/AwAAAAAAAAC0/+L/AwAAAAAAAAC0/+P/AwAAAAAAAAC1/8n/AwAAAAAAAAC1/8r/AwAAAAAAAAC1/+L/AwAAAAAAAAC1/+P/AwAAAAAAAAC2/8n/AwAAAAAAAAC2/8r/AwAAAAAAAAC2/+L/AwAAAAAAAAC2/+P/AwAAAAAAAAC3/8n/AwAAAAAAAAC3/8r/AwAAAAAAAAC3/+L/AwAAAAAAAAC3/+P/AwAAAAAAAAC4/8n/AwAAAAAAAAC4/8r/AwAAAAAAAAC4/+L/AwAAAAAAAAC4/+P/AwAAAAAAAAC5/8n/AwAAAAAAAAC5/8r/AwAAAAAAAAC5/+L/AwAAAAAAAAC5/+P/AwAAAAAAAAC6/8n/AwAAAAAAAAC6/8r/AwAAAAAAAAC6/+L/AwAAAAAAAAC6/+P/AwAAAAAAAAC7/8n/AwAAAAAAAAC7/8r/AwAAAAAAAAC7/+L/AwAAAAAAAAC7/+P/AwAAAAAAAAC8/8n/AwAAAAAAAAC8/8r/AwAAAAAAAAC8/+L/AwAAAAAAAAC8/+P/AwAAAAAAAAC9/8n/AwAAAAAAAAC9/8r/AwAAAAAAAAC9/+L/AwAAAAAAAAC9/+P/AwAAAAAAAAC+/8n/AwAAAAAAAAC+/8r/AwAAAAAAAAC+/+L/AwAAAAAAAAC+/+P/AwAAAAAAAAC//8n/AwAAAAAAAAC//8r/AwAAAAAAAAC//+L/AwAAAAAAAAC//+P/AwAAAAAAAADA/8n/AwAAAAAAAADA/8r/AwAAAAAAAADA/+L/AwAAAAAAAADA/+P/AwAAAAAAAADB/8n/AwAAAAAAAADB/8r/AwAAAAAAAADB/+L/AwAAAAAAAADB/+P/AwAAAAAAAADC/8n/AwAAAAAAAADC/8r/AwAAAAAAAADC/+L/AwAAAAAAAADC/+P/AwAAAAAAAADD/8n/AwAAAAAAAADD/8r/AwAAAAAAAADD/+L/AwAAAAAAAADD/+P/AwAAAAAAAADE/8n/AwAAAAAAAADE/8r/AwAAAAAAAADE/+L/AwAAAAAAAADE/+P/AwAAAAAAAADF/8n/AwAAAAAAAADF/8r/AwAAAAAAAADF/+L/AwAAAAAAAADF/+P/AwAAAAAAAADG/8n/AwAAAAAAAADG/8r/AwAAAAAAAADG/+L/AwAAAAAAAADG/+P/AwAAAAAAAADH/8n/AwAAAAAAAADH/8r/AwAAAAAAAADH/+L/AwAAAAAAAADH/+P/AwAAAAAAAADI/8n/AwAAAAAAAADI/8r/AwAAAAAAAADI/+L/AwAAAAAAAADI/+P/AwAAAAAAAADJ/8n/AwAAAAAAAADJ/8r/AwAAAAAAAADJ/+L/AwAAAAAAAADJ/+P/AwAAAAAAAADK/8n/AwAAAAAAAADK/8r/AwAAAAAAAADK/+L/AwAAAAAAAADK/+P/AwAAAAAAAADL/8n/AwAAAAAAAADL/8r/AwAAAAAAAADL/+L/AwAAAAAAAADL/+P/AwAAAAAAAADM/8n/AwAAAAAAAADM/8r/AwAAAAAAAADM/+L/AwAAAAAAAADM/+P/AwAAAAAAAADN/8n/AwAAAAAAAADN/8r/AwAAAAAAAADN/+L/AwAAAAAAAADN/+P/AwAAAAAAAADO/8n/AwAAAAAAAADO/8r/AwAAAAAAAADO/+L/AwAAAAAAAADO/+P/AwAAAAAAAADP/8n/AwAAAAAAAADP/8r/AwAAAAAAAADP/+L/AwAAAAAAAADP/+P/AwAAAAAAAADQ/8n/AwAAAAAAAADQ/8r/AwAAAAAAAADQ/+L/AwAAAAAAAADQ/+P/AwAAAAAAAADR/8n/AwAAAAAAAADR/8r/AwAAAAAAAADR/+L/AwAAAAAAAADR/+P/AwAAAAAAAADS/8n/AwAAAAAAAADS/8r/AwAAAAAAAADS/+L/AwAAAAAAAADS/+P/AwAAAAAAAADT/8n/AwAAAAAAAADT/8r/AwAAAAAAAADT/+L/AwAAAAAAAADT/+P/AwAAAAAAAADU/8n/AwAAAAAAAADU/8r/AwAAAAAAAADU/+L/AwAAAAAAAADU/+P/AwAAAAAAAADV/8n/AwAAAAAAAADV/8r/AwAAAAAAAADV/+L/AwAAAAAAAADV/+P/AwAAAAAAAADW/8n/AwAAAAAAAADW/8r/AwAAAAAAAADW/+L/AwAAAAAAAADW/+P/AwAAAAAAAADX/8n/AwAAAAAAAADX/8r/AwAAAAAAAADX/+L/AwAAAAAAAADX/+P/AwAAAAAAAADY/8n/AwAAAAAAAADY/8r/AwAAAAAAAADY/+L/AwAAAAAAAADY/+P/AwAAAAAAAADZ/8n/AwAAAAAAAADZ/8r/AwAAAAAAAADZ/+L/AwAAAAAAAADZ/+P/AwAAAAAAAADa/8n/AwAAAAAAAADa/8r/AwAAAAAAAADa/+L/AwAAAAAAAADa/+P/AwAAAAAAAADb/8n/AwAAAAAAAADb/8r/AwAAAAAAAADb/+L/AwAAAAAAAADb/+P/AwAAAAAAAADc/8n/AwAAAAAAAADc/8r/AwAAAAAAAADc/+L/AwAAAAAAAADc/+P/AwAAAAAAAADd/8n/AwAAAAAAAADd/8r/AwAAAAAAAADd/8v/AwAAAAAAAADd/8z/AwAAAAAAAADd/83/AwAAAAAAAADd/87/AwAAAAAAAADd/8//AwAAAAAAAADd/9D/AwAAAAAAAADd/9H/AwAAAAAAAADd/9L/AwAAAAAAAADd/9P/AwAAAAAAAADd/9T/AwAAAAAAAADd/9X/AwAAAAAAAADd/9b/AwAAAAAAAADd/9f/AwAAAAAAAADd/9j/AwAAAAAAAADd/9n/AwAAAAAAAADd/9r/AwAAAAAAAADd/9v/AwAAAAAAAADd/9z/AwAAAAAAAADd/93/AwAAAAAAAADd/97/AwAAAAAAAADd/9//AwAAAAAAAADd/+D/AwAAAAAAAADd/+H/AwAAAAAAAADd/+L/AwAAAAAAAADd/+P/AwAAAAAAAADe/8n/AwAAAAAAAADe/8r/AwAAAAAAAADe/8v/AwAAAAAAAADe/8z/AwAAAAAAAADe/83/AwAAAAAAAADe/87/AwAAAAAAAADe/8//AwAAAAAAAADe/9D/AwAAAAAAAADe/9H/AwAAAAAAAADe/9L/AwAAAAAAAADe/9P/AwAAAAAAAADe/9T/AwAAAAAAAADe/9X/AwAAAAAAAADe/9b/AwAAAAAAAADe/9f/AwAAAAAAAADe/9j/AwAAAAAAAADe/9n/AwAAAAAAAADe/9r/AwAAAAAAAADe/9v/AwAAAAAAAADe/9z/AwAAAAAAAADe/93/AwAAAAAAAADe/97/AwAAAAAAAADe/9//AwAAAAAAAADe/+D/AwAAAAAAAADe/+H/AwAAAAAAAADe/+L/AwAAAAAAAADe/+P/AwAAAAAAAAAWAPv/AwAAAAAAAAAWAPz/AwAAAAAAAAAWAP3/AwAAAAAAAAAWAP7/AwAAAAAAAAAWAP//AwAAAAAAAAAWAAAAAwAAAAAAAAAWAAEAAwAAAAAAAAAXAPv/AwAAAAAAAAAXAPz/AwAAAAAAAAAXAP3/AwAAAAAAAAAXAP7/AwAAAAAAAAAXAP//AwAAAAAAAAAXAAAAAwAAAAAAAAAXAAEAAwAAAAAAAAAYAPL/AwAAAAAAAAAYAPP/AwAAAAAAAAAYAPT/AwAAAAAAAAAYAPX/AwAAAAAAAAAYAPb/AwAAAAAAAAAYAPf/AwAAAAAAAAAYAPj/AwAAAAAAAAAYAPn/AwAAAAAAAAAYAPr/AwAAAAAAAAAYAPv/AwAAAAAAAAAYAPz/AwAAAAAAAAAYAP3/AwAAAAAAAAAYAP7/AwAAAAAAAAAYAP//AwAAAAAAAAAYAAAAAwAAAAAAAAAYAAEAAwAAAAAAAAAYAAIAAwAAAAAAAAAYAAsAAwAAAAAAAAAYAAwAAwAAAAAAAAAZAPL/AwAAAAAAAAAZAPP/AwAAAAAAAAAZAPT/AwAAAAAAAAAZAPX/AwAAAAAAAAAZAPb/AwAAAAAAAAAZAPf/AwAAAAAAAAAZAPj/AwAAAAAAAAAZAPn/AwAAAAAAAAAZAPr/AwAAAAAAAAAZAPv/AwAAAAAAAAAZAPz/AwAAAAAAAAAZAP3/AwAAAAAAAAAZAP7/AwAAAAAAAAAZAP//AwAAAAAAAAAZAAAAAwAAAAAAAAAZAAEAAwAAAAAAAAAZAAIAAwAAAAAAAAAZAAsAAwAAAAAAAAAZAAwAAwAAAAAAAAAaAPL/AwAAAAAAAAAaAPP/AwAAAAAAAAAaAAwAAwAAAAAAAAAbAPL/AwAAAAAAAAAbAPP/AwAAAAAAAAAbAAwAAwAAAAAAAAAcAPL/AwAAAAAAAAAcAPP/AwAAAAAAAAAcAAwAAwAAAAAAAAAdAPL/AwAAAAAAAAAdAPP/AwAAAAAAAAAdAAwAAwAAAAAAAAAeAPL/AwAAAAAAAAAeAPP/AwAAAAAAAAAeAAwAAwAAAAAAAAAfAPL/AwAAAAAAAAAfAPP/AwAAAAAAAAAfAAwAAwAAAAAAAAAgAPL/AwAAAAAAAAAgAPP/AwAAAAAAAAAgAAwAAwAAAAAAAAAhAPL/AwAAAAAAAAAhAPP/AwAAAAAAAAAhAAwAAwAAAAAAAAAiAPL/AwAAAAAAAAAiAPP/AwAAAAAAAAAiAAwAAwAAAAAAAAAjAPL/AwAAAAAAAAAjAPP/AwAAAAAAAAAjAAwAAwAAAAAAAAAkAPL/AwAAAAAAAAAkAPP/AwAAAAAAAAAkAAwAAwAAAAAAAAAlAPL/AwAAAAAAAAAlAPP/AwAAAAAAAAAlAAwAAwAAAAAAAAAmAPL/AwAAAAAAAAAmAPP/AwAAAAAAAAAmAAwAAwAAAAAAAAAnAPL/AwAAAAAAAAAnAPP/AwAAAAAAAAAnAAwAAwAAAAAAAAAoAPL/AwAAAAAAAAAoAPP/AwAAAAAAAAAoAAwAAwAAAAAAAAApAPL/AwAAAAAAAAApAPP/AwAAAAAAAAApAAwAAwAAAAAAAAAqAPL/AwAAAAAAAAAqAPP/AwAAAAAAAAAqAAwAAwAAAAAAAAArAPL/AwAAAAAAAAArAPP/AwAAAAAAAAArAAwAAwAAAAAAAAAsAPL/AwAAAAAAAAAsAPP/AwAAAAAAAAAsAAwAAwAAAAAAAAAtAPL/AwAAAAAAAAAtAPP/AwAAAAAAAAAtAAwAAwAAAAAAAAAuAPL/AwAAAAAAAAAuAPP/AwAAAAAAAAAuAAwAAwAAAAAAAAAvAPL/AwAAAAAAAAAvAPP/AwAAAAAAAAAvAAwAAwAAAAAAAAAwAPL/AwAAAAAAAAAwAPP/AwAAAAAAAAAwAAwAAwAAAAAAAAAxAPL/AwAAAAAAAAAxAPP/AwAAAAAAAAAxAAwAAwAAAAAAAAAyAPL/AwAAAAAAAAAyAPP/AwAAAAAAAAAyAAwAAwAAAAAAAAAzAPL/AwAAAAAAAAAzAPP/AwAAAAAAAAAzAAwAAwAAAAAAAAA0APL/AwAAAAAAAAA0APP/AwAAAAAAAAA0AAwAAwAAAAAAAAA1APL/AwAAAAAAAAA1APP/AwAAAAAAAAA1AAwAAwAAAAAAAAA2APL/AwAAAAAAAAA2APP/AwAAAAAAAAA2AAwAAwAAAAAAAAA3APL/AwAAAAAAAAA3APP/AwAAAAAAAAA3AAwAAwAAAAAAAAA4APL/AwAAAAAAAAA4APP/AwAAAAAAAAA4AAwAAwAAAAAAAAA5APL/AwAAAAAAAAA5APP/AwAAAAAAAAA5AAwAAwAAAAAAAAA6APL/AwAAAAAAAAA6APP/AwAAAAAAAAA6AAwAAwAAAAAAAAA7APL/AwAAAAAAAAA7APP/AwAAAAAAAAA7AAwAAwAAAAAAAAA8APL/AwAAAAAAAAA8APP/AwAAAAAAAAA8AAwAAwAAAAAAAAA9APL/AwAAAAAAAAA9APP/AwAAAAAAAAA9AAwAAwAAAAAAAAA+APL/AwAAAAAAAAA+APP/AwAAAAAAAAA+AAwAAwAAAAAAAAA/APL/AwAAAAAAAAA/APP/AwAAAAAAAAA/AAwAAwAAAAAAAABAAPL/AwAAAAAAAABAAPP/AwAAAAAAAABAAAwAAwAAAAAAAABBAPL/AwAAAAAAAABBAPP/AwAAAAAAAABBAAwAAwAAAAAAAABCAPL/AwAAAAAAAABCAPP/AwAAAAAAAABCAAwAAwAAAAAAAABDAPL/AwAAAAAAAABDAPP/AwAAAAAAAABDAAwAAwAAAAAAAABEAPL/AwAAAAAAAABEAPP/AwAAAAAAAABEAAwAAwAAAAAAAABFAPL/AwAAAAAAAABFAPP/AwAAAAAAAABFAAwAAwAAAAAAAABGAPL/AwAAAAAAAABGAPP/AwAAAAAAAABGAPT/AwAAAAAAAABGAPX/AwAAAAAAAABGAPb/AwAAAAAAAABGAPf/AwAAAAAAAABGAPj/AwAAAAAAAABGAPn/AwAAAAAAAABGAPr/AwAAAAAAAABGAPv/AwAAAAAAAABGAPz/AwAAAAAAAABGAP3/AwAAAAAAAABGAP7/AwAAAAAAAABGAP//AwAAAAAAAABGAAAAAwAAAAAAAABGAAEAAwAAAAAAAABGAAIAAwAAAAAAAABGAAMAAwAAAAAAAABGAAQAAwAAAAAAAABGAAUAAwAAAAAAAABGAAYAAwAAAAAAAABGAAcAAwAAAAAAAABGAAgAAwAAAAAAAABGAAkAAwAAAAAAAABGAAoAAwAAAAAAAABGAAsAAwAAAAAAAABGAAwAAwAAAAAAAABHAPL/AwAAAAAAAABHAPP/AwAAAAAAAABHAPT/AwAAAAAAAABHAPX/AwAAAAAAAABHAPb/AwAAAAAAAABHAPf/AwAAAAAAAABHAPj/AwAAAAAAAABHAPn/AwAAAAAAAABHAPr/AwAAAAAAAABHAPv/AwAAAAAAAABHAPz/AwAAAAAAAABHAP3/AwAAAAAAAABHAP7/AwAAAAAAAABHAP//AwAAAAAAAABHAAAAAwAAAAAAAABHAAEAAwAAAAAAAABHAAIAAwAAAAAAAABHAAMAAwAAAAAAAABHAAQAAwAAAAAAAABHAAUAAwAAAAAAAABHAAYAAwAAAAAAAABHAAcAAwAAAAAAAABHAAgAAwAAAAAAAABHAAkAAwAAAAAAAABHAAoAAwAAAAAAAABHAAsAAwAAAAAAAABHAAwAAwAAAAAAAAAaAAsAAwAAAAAAAAAbAAsAAwAAAAAAAAAcAAsAAwAAAAAAAAAdAAsAAwAAAAAAAAAeAAsAAwAAAAAAAAAfAAsAAwAAAAAAAAAgAAsAAwAAAAAAAAAhAAsAAwAAAAAAAAAiAAsAAwAAAAAAAAAjAAsAAwAAAAAAAAAkAAsAAwAAAAAAAAAlAAsAAwAAAAAAAAAmAAsAAwAAAAAAAAAnAAsAAwAAAAAAAAAoAAsAAwAAAAAAAAApAAsAAwAAAAAAAAAqAAsAAwAAAAAAAAArAAsAAwAAAAAAAAAsAAsAAwAAAAAAAAAtAAsAAwAAAAAAAAAuAAsAAwAAAAAAAAAvAAsAAwAAAAAAAAAwAAsAAwAAAAAAAAAxAAsAAwAAAAAAAAAyAAsAAwAAAAAAAAAzAAsAAwAAAAAAAAA0AAsAAwAAAAAAAAA1AAsAAwAAAAAAAAA2AAsAAwAAAAAAAAA3AAsAAwAAAAAAAAA4AAsAAwAAAAAAAAA5AAsAAwAAAAAAAAA6AAsAAwAAAAAAAAA7AAsAAwAAAAAAAAA8AAsAAwAAAAAAAAA9AAsAAwAAAAAAAAA+AAsAAwAAAAAAAAA/AAsAAwAAAAAAAABAAAsAAwAAAAAAAABBAAsAAwAAAAAAAABCAAsAAwAAAAAAAABDAAsAAwAAAAAAAABEAAsAAwAAAAAAAABFAAsAAwAAAAAAAAAWAAMAAwAAAAAAAAAWAAQAAwAAAAAAAAAWAAUAAwAAAAAAAAAWAAYAAwAAAAAAAAAWAAcAAwAAAAAAAAAWAAgAAwAAAAAAAAAWAAkAAwAAAAAAAAAWAAoAAwAAAAAAAAAXAAMAAwAAAAAAAAAXAAQAAwAAAAAAAAAXAAUAAwAAAAAAAAAXAAYAAwAAAAAAAAAXAAcAAwAAAAAAAAAXAAgAAwAAAAAAAAAXAAkAAwAAAAAAAAAXAAoAAwAAAAAAAAAYAAMAAwAAAAAAAAAYAAQAAwAAAAAAAAAYAAUAAwAAAAAAAAAYAAYAAwAAAAAAAAAYAAcAAwAAAAAAAAAYAAgAAwAAAAAAAAAYAAkAAwAAAAAAAAAYAAoAAwAAAAAAAAAZAAMAAwAAAAAAAAAZAAQAAwAAAAAAAAAZAAUAAwAAAAAAAAAZAAYAAwAAAAAAAAAZAAcAAwAAAAAAAAAZAAgAAwAAAAAAAAAZAAkAAwAAAAAAAAAZAAoAAwAAAAAAAACx/8v/AwAAAAAAAACy/8v/AwAAAAAAAACz/8v/AwAAAAAAAAC0/8v/AwAAAAAAAAC1/8v/AwAAAAAAAAC2/8v/AwAAAAAAAAC3/8v/AwAAAAAAAAC4/8v/AwAAAAAAAAC5/8v/AwAAAAAAAAC6/8v/AwAAAAAAAAC7/8v/AwAAAAAAAAC8/8v/AwAAAAAAAAC9/8v/AwAAAAAAAAC+/8v/AwAAAAAAAAC//8v/AwAAAAAAAADA/8v/AwAAAAAAAADB/8v/AwAAAAAAAADC/8v/AwAAAAAAAADD/8v/AwAAAAAAAADE/8v/AwAAAAAAAADF/8v/AwAAAAAAAADG/8v/AwAAAAAAAADH/8v/AwAAAAAAAADI/8v/AwAAAAAAAADJ/8v/AwAAAAAAAADK/8v/AwAAAAAAAADL/8v/AwAAAAAAAADM/8v/AwAAAAAAAADN/8v/AwAAAAAAAADO/8v/AwAAAAAAAADP/8v/AwAAAAAAAADQ/8v/AwAAAAAAAADR/8v/AwAAAAAAAADS/8v/AwAAAAAAAADT/8v/AwAAAAAAAADU/8v/AwAAAAAAAADV/8v/AwAAAAAAAADW/8v/AwAAAAAAAADX/8v/AwAAAAAAAADY/8v/AwAAAAAAAADZ/8v/AwAAAAAAAADa/8v/AwAAAAAAAADb/8v/AwAAAAAAAADc/8v/AwAAAAAAAADc/8z/AwAAAAAAAADc/83/AwAAAAAAAADc/87/AwAAAAAAAADc/8//AwAAAAAAAADc/9D/AwAAAAAAAADc/9H/AwAAAAAAAADc/9L/AwAAAAAAAADc/9P/AwAAAAAAAADc/9T/AwAAAAAAAADc/9X/AwAAAAAAAADc/9b/AwAAAAAAAADc/9f/AwAAAAAAAADc/9j/AwAAAAAAAADc/9n/AwAAAAAAAADc/9r/AwAAAAAAAADc/9v/AwAAAAAAAADc/9z/AwAAAAAAAADc/93/AwAAAAAAAADc/97/AwAAAAAAAADc/9//AwAAAAAAAADc/+D/AwAAAAAAAADc/+H/AwAAAAAAAACx/+H/AwAAAAAAAACy/+H/AwAAAAAAAACz/+H/AwAAAAAAAAC0/+H/AwAAAAAAAAC1/+H/AwAAAAAAAAC2/+H/AwAAAAAAAAC3/+H/AwAAAAAAAAC4/+H/AwAAAAAAAAC5/+H/AwAAAAAAAAC6/+H/AwAAAAAAAAC7/+H/AwAAAAAAAAC8/+H/AwAAAAAAAAC9/+H/AwAAAAAAAAC+/+H/AwAAAAAAAAC//+H/AwAAAAAAAADA/+H/AwAAAAAAAADB/+H/AwAAAAAAAADC/+H/AwAAAAAAAADD/+H/AwAAAAAAAADE/+H/AwAAAAAAAADF/+H/AwAAAAAAAADG/+H/AwAAAAAAAADH/+H/AwAAAAAAAADI/+H/AwAAAAAAAADJ/+H/AwAAAAAAAADK/+H/AwAAAAAAAADL/+H/AwAAAAAAAADM/+H/AwAAAAAAAADN/+H/AwAAAAAAAADO/+H/AwAAAAAAAADP/+H/AwAAAAAAAADQ/+H/AwAAAAAAAADR/+H/AwAAAAAAAADS/+H/AwAAAAAAAADT/+H/AwAAAAAAAADU/+H/AwAAAAAAAADV/+H/AwAAAAAAAADW/+H/AwAAAAAAAADX/+H/AwAAAAAAAADY/+H/AwAAAAAAAADZ/+H/AwAAAAAAAADa/+H/AwAAAAAAAADb/+H/AwAAAAAAAACx/8z/AwAAAAAAAACx/83/AwAAAAAAAACx/87/AwAAAAAAAACx/8//AwAAAAAAAACx/9D/AwAAAAAAAACx/9H/AwAAAAAAAACx/9L/AwAAAAAAAACx/9P/AwAAAAAAAACx/9T/AwAAAAAAAACx/9X/AwAAAAAAAACx/9b/AwAAAAAAAACx/9f/AwAAAAAAAACx/9j/AwAAAAAAAACx/9n/AwAAAAAAAACx/9r/AwAAAAAAAACx/9v/AwAAAAAAAACx/9z/AwAAAAAAAACx/93/AwAAAAAAAACx/97/AwAAAAAAAACx/9//AwAAAAAAAACx/+D/AwAAAAAAAADq//T/AwAAAAAAAADq//X/AwAAAAAAAADq//b/AwAAAAAAAADq//f/AwAAAAAAAADq//j/AwAAAAAAAADq//n/AwAAAAAAAADq//r/AwAAAAAAAADq//v/AwAAAAAAAADq//z/AwAAAAAAAADq//3/AwAAAAAAAADq//7/AwAAAAAAAADq////AwAAAAAAAADq/wAAAwAAAAAAAADq/wEAAwAAAAAAAADq/wIAAwAAAAAAAADq/wMAAwAAAAAAAADq/wQAAwAAAAAAAADq/wUAAwAAAAAAAADq/wYAAwAAAAAAAADq/wcAAwAAAAAAAADq/wgAAwAAAAAAAADq/wkAAwAAAAAAAADq/woAAwAAAAAAAADr//T/AwAAAAAAAADs//T/AwAAAAAAAADt//T/AwAAAAAAAADu//T/AwAAAAAAAADv//T/AwAAAAAAAADw//T/AwAAAAAAAADx//T/AwAAAAAAAADy//T/AwAAAAAAAADz//T/AwAAAAAAAAD0//T/AwAAAAAAAAD1//T/AwAAAAAAAAD2//T/AwAAAAAAAAD3//T/AwAAAAAAAAD4//T/AwAAAAAAAAD5//T/AwAAAAAAAAD6//T/AwAAAAAAAAD7//T/AwAAAAAAAAD8//T/AwAAAAAAAAD9//T/AwAAAAAAAAD+//T/AwAAAAAAAAD///T/AwAAAAAAAAAAAPT/AwAAAAAAAAABAPT/AwAAAAAAAAACAPT/AwAAAAAAAAADAPT/AwAAAAAAAAAEAPT/AwAAAAAAAAAFAPT/AwAAAAAAAAAGAPT/AwAAAAAAAAAHAPT/AwAAAAAAAAAIAPT/AwAAAAAAAAAJAPT/AwAAAAAAAAAKAPT/AwAAAAAAAAALAPT/AwAAAAAAAAAMAPT/AwAAAAAAAAANAPT/AwAAAAAAAAAOAPT/AwAAAAAAAAAPAPT/AwAAAAAAAAAQAPT/AwAAAAAAAAARAPT/AwAAAAAAAAASAPT/AwAAAAAAAAATAPT/AwAAAAAAAAAUAPT/AwAAAAAAAAAVAPT/AwAAAAAAAAAVAPX/AwAAAAAAAAAVAPb/AwAAAAAAAAAVAPf/AwAAAAAAAAAVAPj/AwAAAAAAAAAVAPn/AwAAAAAAAAAVAPr/AwAAAAAAAAAVAPv/AwAAAAAAAAAVAPz/AwAAAAAAAAAVAP3/AwAAAAAAAAAVAP7/AwAAAAAAAAAVAP//AwAAAAAAAAAVAAAAAwAAAAAAAAAVAAEAAwAAAAAAAAAVAAIAAwAAAAAAAAAVAAMAAwAAAAAAAAAVAAQAAwAAAAAAAAAVAAUAAwAAAAAAAAAVAAYAAwAAAAAAAAAVAAcAAwAAAAAAAAAVAAgAAwAAAAAAAAAVAAkAAwAAAAAAAAAVAAoAAwAAAAAAAADr/woAAwAAAAAAAADs/woAAwAAAAAAAADt/woAAwAAAAAAAADu/woAAwAAAAAAAADv/woAAwAAAAAAAADw/woAAwAAAAAAAADx/woAAwAAAAAAAADy/woAAwAAAAAAAADz/woAAwAAAAAAAAD0/woAAwAAAAAAAAD1/woAAwAAAAAAAAD2/woAAwAAAAAAAAD3/woAAwAAAAAAAAD4/woAAwAAAAAAAAD5/woAAwAAAAAAAAD6/woAAwAAAAAAAAD7/woAAwAAAAAAAAD8/woAAwAAAAAAAAD9/woAAwAAAAAAAAD+/woAAwAAAAAAAAD//woAAwAAAAAAAAAAAAoAAwAAAAAAAAABAAoAAwAAAAAAAAACAAoAAwAAAAAAAAADAAoAAwAAAAAAAAAEAAoAAwAAAAAAAAAFAAoAAwAAAAAAAAAGAAoAAwAAAAAAAAAHAAoAAwAAAAAAAAAIAAoAAwAAAAAAAAAJAAoAAwAAAAAAAAAKAAoAAwAAAAAAAAALAAoAAwAAAAAAAAAMAAoAAwAAAAAAAAANAAoAAwAAAAAAAAAOAAoAAwAAAAAAAAAPAAoAAwAAAAAAAAAQAAoAAwAAAAAAAAARAAoAAwAAAAAAAAASAAoAAwAAAAAAAAATAAoAAwAAAAAAAAAUAAoAAwAAAAAAAAAaAPT/AwAAAAAAAAAbAPT/AwAAAAAAAAAcAPT/AwAAAAAAAAAdAPT/AwAAAAAAAAAeAPT/AwAAAAAAAAAfAPT/AwAAAAAAAAAgAPT/AwAAAAAAAAAhAPT/AwAAAAAAAAAiAPT/AwAAAAAAAAAjAPT/AwAAAAAAAAAkAPT/AwAAAAAAAAAlAPT/AwAAAAAAAAAmAPT/AwAAAAAAAAAnAPT/AwAAAAAAAAAoAPT/AwAAAAAAAAApAPT/AwAAAAAAAAAqAPT/AwAAAAAAAAArAPT/AwAAAAAAAAAsAPT/AwAAAAAAAAAtAPT/AwAAAAAAAAAuAPT/AwAAAAAAAAAvAPT/AwAAAAAAAAAwAPT/AwAAAAAAAAAxAPT/AwAAAAAAAAAyAPT/AwAAAAAAAAAzAPT/AwAAAAAAAAA0APT/AwAAAAAAAAA1APT/AwAAAAAAAAA2APT/AwAAAAAAAAA3APT/AwAAAAAAAAA4APT/AwAAAAAAAAA5APT/AwAAAAAAAAA6APT/AwAAAAAAAAA7APT/AwAAAAAAAAA8APT/AwAAAAAAAAA9APT/AwAAAAAAAAA+APT/AwAAAAAAAAA/APT/AwAAAAAAAABAAPT/AwAAAAAAAABBAPT/AwAAAAAAAABCAPT/AwAAAAAAAABDAPT/AwAAAAAAAABEAPT/AwAAAAAAAABFAPT/AwAAAAAAAABFAPX/AwAAAAAAAABFAPb/AwAAAAAAAABFAPf/AwAAAAAAAABFAPj/AwAAAAAAAABFAPn/AwAAAAAAAABFAPr/AwAAAAAAAABFAPv/AwAAAAAAAABFAPz/AwAAAAAAAABFAP3/AwAAAAAAAABFAP7/AwAAAAAAAABFAP//AwAAAAAAAABFAAAAAwAAAAAAAABFAAEAAwAAAAAAAABFAAIAAwAAAAAAAABFAAMAAwAAAAAAAABFAAQAAwAAAAAAAABFAAUAAwAAAAAAAABFAAYAAwAAAAAAAABFAAcAAwAAAAAAAABFAAgAAwAAAAAAAABFAAkAAwAAAAAAAABFAAoAAwAAAAAAAAAaAAoAAwAAAAAAAAAbAAoAAwAAAAAAAAAcAAoAAwAAAAAAAAAdAAoAAwAAAAAAAAAeAAoAAwAAAAAAAAAfAAoAAwAAAAAAAAAgAAoAAwAAAAAAAAAhAAoAAwAAAAAAAAAiAAoAAwAAAAAAAAAjAAoAAwAAAAAAAAAkAAoAAwAAAAAAAAAlAAoAAwAAAAAAAAAmAAoAAwAAAAAAAAAnAAoAAwAAAAAAAAAoAAoAAwAAAAAAAAApAAoAAwAAAAAAAAAqAAoAAwAAAAAAAAArAAoAAwAAAAAAAAAsAAoAAwAAAAAAAAAtAAoAAwAAAAAAAAAuAAoAAwAAAAAAAAAvAAoAAwAAAAAAAAAwAAoAAwAAAAAAAAAxAAoAAwAAAAAAAAAyAAoAAwAAAAAAAAAzAAoAAwAAAAAAAAA0AAoAAwAAAAAAAAA1AAoAAwAAAAAAAAA2AAoAAwAAAAAAAAA3AAoAAwAAAAAAAAA4AAoAAwAAAAAAAAA5AAoAAwAAAAAAAAA6AAoAAwAAAAAAAAA7AAoAAwAAAAAAAAA8AAoAAwAAAAAAAAA9AAoAAwAAAAAAAAA+AAoAAwAAAAAAAAA/AAoAAwAAAAAAAABAAAoAAwAAAAAAAABBAAoAAwAAAAAAAABCAAoAAwAAAAAAAABDAAoAAwAAAAAAAABEAAoAAwAAAAAAAAAaAPX/AwAAAAAAAAAaAPb/AwAAAAAAAAAaAPf/AwAAAAAAAAAaAPj/AwAAAAAAAAAaAPn/AwAAAAAAAAAaAPr/AwAAAAAAAAAaAPv/AwAAAAAAAAAaAPz/AwAAAAAAAAAaAP3/AwAAAAAAAAAaAP7/AwAAAAAAAAAaAP//AwAAAAAAAAAaAAAAAwAAAAAAAAAaAAEAAwAAAAAAAAAaAAIAAwAAAAAAAAAaAAMAAwAAAAAAAAAaAAQAAwAAAAAAAAAaAAUAAwAAAAAAAAAaAAYAAwAAAAAAAAAaAAcAAwAAAAAAAAAaAAgAAwAAAAAAAAAaAAkAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_6uqi0")

[node name="Background" type="TileMapLayer" parent="."]
z_index = -5
tile_set = SubResource("TileSet_hbq6r")

[node name="Terrain Decor" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_7kbhc")

[node name="Player" parent="." instance=ExtResource("7_ds0tp")]
position = Vector2(0, 153)

[connection signal="body_entered" from="Camera/Camera Move Up" to="Camera" method="_on_camera_move_up_body_entered"]
[connection signal="body_entered" from="Camera/Camera Move Down" to="Camera" method="_on_camera_move_down_body_entered"]
[connection signal="body_entered" from="Camera/Camera Move Right" to="Camera" method="_on_camera_move_right_body_entered"]
[connection signal="body_entered" from="Camera/Camera Move Left" to="Camera" method="_on_camera_move_left_body_entered"]
